# rodin

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL.md  INSTALLATION_TESTING_REPORT.md  README.md  RELEASE_CHECKLIST.md
examples/: CMakeLists.txt
examples/BoundaryOptimization/: AcousticCloaking.cpp  ClampLocator.cpp  EMM.cpp  SurfaceCooling.cpp  Tools.h  WaterTank.cpp
examples/Context/: CMakeLists.txt  MPI.cpp
examples/DG/: Poisson.cpp
examples/DensityOptimization/: CMakeLists.txt  TemperatureMinimization.cpp
examples/Geometry/: AnnulusDetection.cpp  AttributeDetection.cpp  BalancedCompactPartitioner.cpp  BoundaryTracing.cpp  Box.cpp  CCL.cpp  CMakeLists.txt  Displace.cpp  GreedyPartitioner.cpp  Scale.cpp  Skin.cpp  Trace.cpp  Trim.cpp  UniformGrid.cpp
examples/Heart/: AnnulusClosing.cpp  AnnulusDetection.cpp  AttributeDetection.cpp  CMakeLists.txt
examples/IO/: CMakeLists.txt  MFEM.cpp  XDMF.cpp
examples/IntegralEquations/: CMakeLists.txt  ElasticDistribution.cpp  NewtonianPotential.cpp
examples/MMG/: CMakeLists.txt  DomainDiscretization.cpp  GridFunctionIO.cpp  MeshIO.cpp  MeshOptimization.cpp
examples/MPI/: BoostMPITest.cpp  CMakeLists.txt  MPIMesh.cpp
examples/MPI/Boost/: CMakeLists.txt
examples/MPI/Context/: CMakeLists.txt
examples/MPI/Geometry/: CMakeLists.txt  Mesh.cpp  Sharder.cpp  UniformGrid.cpp
examples/MPI/Variational/: CMakeLists.txt  P1.cpp
examples/Misc/: CMakeLists.txt
examples/Misc/RS2023/: CMakeLists.txt  CellFunction.cpp  Domain.cpp
examples/Misc/ZAG2025/: AmstutzMethod.cpp  CMakeLists.txt  MinOneState.cpp  Update.cpp  Update.h
examples/Models/: CMakeLists.txt
examples/Models/Distance/: CMakeLists.txt  SpaldingTucker.cpp
examples/Models/Eikonal/: CMakeLists.txt  FMM.cpp
examples/PDEs/: CMakeLists.txt  Darcy.cpp  Elasticity.cpp  Helmholtz.cpp  Periodic.cpp  Poisson.cpp  SurfaceMesh.cpp
examples/PETSc/: CMakeLists.txt  MPI_Poisson.cpp  Poisson.cpp  Seq_Poisson.cpp
examples/PETSc/DensityOptimization/: CMakeLists.txt  TemperatureMinimization.cpp
examples/PETSc/LevelSetStokes/: 3DPostSmooth.cpp  3Dv1.cpp  3Dv11_test.cpp  3Dv13.cpp  3Dv14_test.cpp  3Dv15_test.cpp  3Dv2.cpp  3Dv3.cpp  3Dv4_test.cpp  3Dv8_test.cpp  3Dv9.cpp  CMakeLists.txt  LevelSetStokes2DObstacle.cpp  LevelSetStokes2DObstacle_RV.cpp  LevelSetStokes3DObstacle.cpp  LevelSetStokes3DObstacle_NS.cpp  LevelSetStokes3DObstacle_RV.cpp  RuntimeConfig.h
examples/PETSc/PDEs/: CMakeLists.txt  MPI_Poisson.cpp  Seq_LidDrivenCavity.cpp  Seq_NavierStokes.cpp  Seq_Poisson.cpp  Seq_Stokes.cpp  Seq_Validation_Stokes.cpp
examples/PETSc/ShapeOptimization/: CMakeLists.txt  LevelSetCantilever2D.cpp  LevelSetCantilever3D.cpp  LevelSetStokes3DObstacle.cpp
examples/QF/: GrundmannMoller.cpp
examples/Scotch/: CMakeLists.txt  MeshPartitioner.cpp
examples/ShapeOptimization/: CMakeLists.txt  LevelSetArch2D.cpp  LevelSetCantilever2D.cpp  LevelSetCantilever3D.cpp  LevelSetEigenvalue2D.cpp  LevelSetMast2D.cpp  SimpleCantilever2D.cpp
examples/Solid/: BlockGravity.cpp  CMakeLists.txt  CantileverBeam.cpp
examples/SurfaceEvolution/ConormalAdvection/: Plane.cpp  Test.cpp
examples/SurfaceEvolution/FirePropagation/: Simulation.cpp  Topography.cpp
examples/Variational/: BooleanFunction.cpp  CMakeLists.txt  Normal.cpp
examples/Variational/H1/: CMakeLists.txt  H1Element.cpp
examples/Variational/P0/: ScalarP0Projection.cpp
examples/Variational/P1/: CMakeLists.txt  P1GridFunctionGradient.cpp  P1GridFunctionIO.cpp  P1Potential.cpp  ScalarP1Projection.cpp  VectorP1Projection.cpp
src/Rodin/: Alert.h  Array.h  Assembly.h  CMakeLists.txt  Cast.h  Common.h  Configure.h.in  Context.h  Copyable.h  FlatSet.h  FormLanguage.h  ForwardDecls.h  Geometry.h  IO.h  Identifiable.cpp  Identifiable.h  LinearElasticity.h  MMG.h  MPI.h  Math.h  Moveable.h  PETSc.h  Pair.h  Plot.h  QF.h  Solid.h  Solver.h  Test.h  Threads.h  Tuple.h  Types.h  Utility.h  Variational.h
src/Rodin/Advection/: CMakeLists.txt  Lagrangian.h
src/Rodin/Alert/: Bold.h  CMakeLists.txt  ClassException.h  Color.h  Exception.h  ForwardDecls.h  Identifier.h  Info.h  MemberFunctionException.h  MemberFunctionWarning.h  Message.h  NamespacedException.h  NewLine.h  Notation.h  Raise.h  Reset.h  Stylize.h  Success.h  Text.h  Warning.h
src/Rodin/Assembly/: AssemblyBase.h  CMakeLists.txt  Default.h  ForwardDecls.h  Generic.h  Input.h  Multithreaded.cpp  Multithreaded.h  OpenMP.cpp  OpenMP.h  Sequential.cpp  Sequential.h
src/Rodin/Context/: Base.h  CMakeLists.txt  Local.cpp  Local.h  MPI.h  Sequential.h
src/Rodin/Distance/: Base.h  Eikonal.h  Poisson.h  Rvachev.h  SignedPoisson.h  SpaldingTucker.h
src/Rodin/Eikonal/: CMakeLists.txt  FMM.h
src/Rodin/FormLanguage/: Base.cpp  Base.h  CMakeLists.txt  Debug.h  ForwardDecls.h  IsPlaneObject.h  List.h  Traits.h
src/Rodin/Geometry/: AttributeIndex.h  BalancedCompactPartitioner.cpp  BalancedCompactPartitioner.h  CMakeLists.txt  Connectivity.cpp  Connectivity.h  Euclidean.h  ForwardDecls.h  GeometryIndexed.h  GreedyPartitioner.cpp  GreedyPartitioner.h  IdentityTransformation.h  IndexGenerator.h  IsoparametricTransformation.h  MPIConnectivity.h  MPIIndexGenerator.h  MPIMesh.cpp  MPIMesh.h  MPISharder.cpp  MPISharder.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshPartitioner.h  MeshShard.cpp  MeshShard.h  MeshSharder.h  Point.cpp  Point.h  PointCloud.h  Polytope.cpp  Polytope.h  PolytopeCount.h  PolytopeIndexed.h  PolytopeIterator.cpp  PolytopeIterator.h  PolytopeQuadrature.cpp  PolytopeQuadrature.h  PolytopeTransformation.cpp  PolytopeTransformation.h  (+9 more)
src/Rodin/Hilbert/: H1a.h
src/Rodin/IO/: CMakeLists.txt  EnSight6.cpp  EnSight6.h  Ensight6.cpp  Ensight6.h  ForwardDecls.h  GridFunctionLoader.h  GridFunctionPrinter.h  HDF5.h  Helpers.cpp  Loader.h  MEDIT.cpp  MEDIT.h  MFEM.cpp  MFEM.h  MeshLoader.h  MeshPrinter.h  Printer.h  XDMF.cpp  XDMF.h
src/Rodin/LinearElasticity/: CMakeLists.txt  Problem.h
src/Rodin/MMG/: Adapt.cpp  Adapt.h  CMakeLists.txt  Common.cpp  Common.h  Configure.h.in  ForwardDecls.h  GridFunction.h  ImplicitDomainMesher.cpp  ImplicitDomainMesher.h  (+13 more)
(+2122 files in other folders)
