if (RODIN_BUILD_EXAMPLES)
  add_subdirectory(IO)
  if (RODIN_WITH_PLOT)
    add_subdirectory(Plot)
  endif()

  add_subdirectory(Alert)
  add_subdirectory(Context)
  add_subdirectory(Geometry)
  add_subdirectory(Variational)

  add_subdirectory(QF)
  add_subdirectory(MMG)
  add_subdirectory(Misc)
  add_subdirectory(PDEs)
  add_subdirectory(Heart)
  add_subdirectory(Models)
  # add_subdirectory(SurfaceEvolution)
  add_subdirectory(IntegralEquations)
  add_subdirectory(ShapeOptimization)
  add_subdirectory(DensityOptimization)
  # add_subdirectory(SurfaceOptimization)
  # add_subdirectory(BoundaryOptimization)

  if (RODIN_USE_SCOTCH)
    add_subdirectory(Scotch)
  endif()

  if (RODIN_USE_PETSC)
    add_subdirectory(PETSc)
  endif()

  if (RODIN_USE_MFEM)
    add_subdirectory(MFEM)
  endif()

  if (RODIN_USE_MPI)
    add_subdirectory(MPI)
  endif()
endif()
